Person client PK and maven compiler plugin were added